<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

    <Button
        android:text="@string/high_scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/score_button"
        android:textColor="@color/green_700"
        android:textSize="36sp"
        android:background="#00000000"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/about_button"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/start_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#00000000"
        android:contentDescription="@string/todo"
        android:src="@drawable/play"
        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/simon_imageView"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        app:srcCompat="@drawable/simon"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo1" />

    <Button
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_button"
        android:textColor="@color/green_700"
        android:textSize="36sp"
        android:background="#00000000"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/start_imageButton"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
